Fix a wrong derivative

--- a/midtermExam2.tex
+++ b/midtermExam2.tex
@@ -340,7 +340,7 @@
               \\
               \\
               \\
-              -\hat{y} \bigg( -\dfrac{i}{(\omega/c)^2 \dfrac{2 \pi \omega B^2_0}{a} sin(\dfrac{2 \pi y}{a}) cos(\dfrac{2 \pi y}{a}) cos^2(\dfrac{\pi x}{a}) } \bigg)
+              -\hat{y} \bigg( -\dfrac{i}{(\omega/c-k^2)^2 }  \dfrac{2 \pi \omega B^2_0}{a} sin(\dfrac{2 \pi y}{a}) cos(\dfrac{2 \pi y}{a}) cos^2(\dfrac{\pi x}{a}) \bigg)
               \\
               \\
               \\
