--- a/midtermExam2.tex
+++ b/midtermExam2.tex
@@ -361,11 +361,17 @@
             \\
             \\
             \\
+            \Longrightarrow   \bigints\limits_{0}^{a} \bigints\limits_{0}^{a} ~ \langle S \rangle dx ~ dy
+            =\dfrac{1}{8 \mu_0} \dfrac{\pi^2 k \omega B^2_0}{\left[(\omega/c)^2-k^2\right]^2} \left[ 
+              \bigg( \dfrac{1}{a} \bigg)^2+\bigg( \dfrac{2}{a} \bigg)^2
+            \right]
+            \\
+            \\
+            \\
+            \\
             \therefore ~~~ \boxed{
               \bigints\limits_{0}^{a} \bigints\limits_{0}^{a} ~ \langle S \rangle dx ~ dy
-              =\dfrac{1}{8 \mu_0} \dfrac{\pi^2 k \omega B^2_0}{\left[(\omega/c)^2-k^2\right]^2} \left[ 
-                \bigg( \dfrac{\pi}{a} \bigg)^2+\bigg( \dfrac{2}{a} \bigg)^2
-              \right]
+              =\dfrac{5}{8 \mu_0} \dfrac{\pi^2 k \omega B^2_0}{\left[(\omega/c)^2-k^2\right]^2 ~ a^2}
             } ~~~~ \checkmark
             \\
           $
