--- a/midtermExam2.tex
+++ b/midtermExam2.tex
@@ -259,7 +259,6 @@
 
           \textcolor{hwColor}{
             \\
-            Behnam was here
           }
 
       \item Assume $7 ~ keV$ photons again, estimate how thick the foil should be in order to reduce the
@@ -611,9 +610,9 @@
       surface charge density on the surface of an ideal conductor. Assume the waveguide is an ideal
       conductor.
 
-        % \textcolor{hwColor}{
-        %   \\
-        % }
+        \textcolor{hwColor}{
+          \\
+        }
   
     \end{enumerate}
 
@@ -800,7 +799,7 @@
           \delta-B-\delta_E=\phi
           \\
           \\
-        $.
+        $
       }
 
     \end{enumerate}
